--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "momentum.css"/>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <title>Momentum App</title>
 </head>
 <body>
@@ -13,7 +12,10 @@
         <input required maxlength="15" type="text" placeholder="이름을 입력하시오"/>
         <button id="login-btn" class= "login-btn">로그인</button>
     </form>
-    <h1 id="greeting" class = "hidden"></h1>
+    <div class="logining">
+        <h1 id="greeting" class = "hidden"></h1>
+        <button id="logout-btn" class="hidden">로그아웃</button>
+    </div>
     <h2 id ="clock" class = "clock-font">00:00:00</h2>
     <form id = "todo-form">
         <input type="text" maxlength="30" placeholder="wirte todo and press enter" />
