--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
     </div>
     <h2 id ="clock" class = "clock-font">00:00:00</h2>
     <form id = "todo-form">
-        <input type="text" maxlength="30" placeholder="wirte todo and press enter" />
+        <input type="text" maxlength="30" placeholder="write todo and press enter" />
     </form>
     <ul id ="todo-list" class = "todo-font">
     </ul>
     <div id ="quote" class = "quote-font">
-        <span></span><br>
-        <span></span>
+        <div class="quotes">
+            <span></span><br>
+            <span></span>
+        </div>
     </div>
     <div id= "weather" class = "weather-font">
         <span></span>
